ecommerce/ecommerce-boundedContext/istio/ecommerce-web-reactive-v2.yaml
##################################################################################################
# Reviews service v2
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-web-reactive
  labels:
    app: ecommerce-web-reactive
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-web-reactive
      version: v2
  template:
    metadata:
      labels:
        app: ecommerce-web-reactive
        version: v2
    spec:
      containers:
      - name: reviews
        image: docker.io/degloba/ecommerce-web-reactive:latest
        imagePullPolicy: IfNotPresent
#        env:
#        - name: LOG_DIR
#          value: "/tmp/logs"
#        ports:
#        - containerPort: 9080
#        volumeMounts:
#        - name: tmp
#          mountPath: /tmp
#        - name: wlp-output
#          mountPath: /opt/ibm/wlp/output
#        securityContext:
#          runAsUser: 1000
#      volumes:
#      - name: wlp-output
#        emptyDir: {}
#      - name: tmp
#        emptyDir: {}
---
