ecommerce/ecommerce-boundedContext/istio/ecommerce-webapp-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-webapp
  labels:
    app: ecommerce-webapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-webapp
      version: v1
  template:
    metadata:
      labels:
        app: ecommerce-webapp
        version: v1
    spec:
      serviceAccountName: ecommerce-webapp
      containers:
      - name: ecommerce-webapp
        image: docker.io/degloba/ecommerce-webapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
---
