ecommerce/ecommerce-boundedContext/istio/ecommerce-webapp.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-webapp
  labels:
    app: ecommerce-webapp
    service: ecommerce-webapp
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ecommerce-webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-webapp-v1
  labels:
    app: ecommerce-webapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-webapp
      version: v1
  template:
    metadata:
      labels:
        app: ecommerce-webapp
        version: v1
    spec:
      containers:
      - name: ecommerce-webapp
        image: docker.io/degloba/ecommerce-webapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        securityContext:
          runAsUser: 1000
---
