ecommerce/ecommerce-boundedContext/istio/webapp-angular-nodeport.yaml
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-webapp-angular
  namespace: default
  labels:
    app: ecommerce-webapp-angular
    tier: frontend
    track: stable
spec:
  type: NodePort
  ports:
  - protocol: TCP
  - port: 80   # port del servei
    name: http
    targetPort: 80    # la majoria de vegades es identic a containerPort.En el nostre cas el port 80 es el port del nginx
    nodePort: 4200   # port a través el qual s'accedeix des de fora
  selector:
    app: ecommerce-webapp-angular
    tier: frontend
    track: stable
---
